# cw20-reflection

./: .gitignore  Cargo.toml  LICENSE  README.md  upload_wasm_testnet.sh
.github/workflows/: tests.yml
contracts/cw20-merkle-airdrop/src/: contract.rs
contracts/cw20_reflection_token/: Cargo.toml
contracts/cw20_reflection_token/.cargo/: config.toml
contracts/cw20_reflection_token/examples/: reflection_schema.rs
contracts/cw20_reflection_token/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/cw20_reflection_token/src/: contract.rs  lib.rs  msg.rs  test.rs  tests.rs
contracts/cw20_reflection_treasury/: Cargo.toml
contracts/cw20_reflection_treasury/.cargo/: config
contracts/cw20_reflection_treasury/examples/: treasury_schema.rs
contracts/cw20_reflection_treasury/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/cw20_reflection_treasury/src/: contract.rs  msg.rs
