[package]
name = "cw20-reflection-token"
version = "0.0.1"
authors = []
edition = "2021"
description = "Backward compatible implementation of a CosmWasm-20 compliant reflection token"
license = "MIT"
repository = "https://github.com/choice-exchange/cw20-reflection"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cw2                = { version = "2.0.0" }
cw20               = { version = "2.0.0" }
cw20-base          = { version = "2.0.0" }
cosmwasm-schema    = { version = "2.2.2" }
cosmwasm-std       = { version = "2.2.2", features = [
    "abort",
    "cosmwasm_1_2",
    "cosmwasm_1_3",
    "cosmwasm_1_4",
    "cosmwasm_2_0",
    "iterator",
    "stargate"
] }
cw-storage-plus    = { version = "2.0.0" }

schemars           = { version = "0.8.22" }
serde              = { version = "1.0.219", default-features = false, features = ["derive"] }
serde-json-wasm    = { version = "1.0.0" }
serde_json         = { version = "1.0.140" }
ed25519-zebra      = { version = "4.1.0" }
hex                = { version = "0.4.3" }

choice             = { path = "../../packages/choice", version = "0.0.1"}

[dev-dependencies]
